Apply OOM-GC-Tests